# url_cache

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/url_cache/: core.md  dir_cache.md  html_utils.md  model.md  session.md  summary_cache.md  utils.md
docs/url_cache/sites/: abstract.md  stackoverflow.md
docs/url_cache/sites/myanimelist/: core.md
docs/url_cache/sites/myanimelist/urls/: v4.md
docs/url_cache/sites/youtube/: core.md  srt_converter.md  subtitles_downloader.md
src/url_cache/: __main__.py  common.py  core.py  dir_cache.py  exceptions.py  model.py  session.py  summary_cache.py  utils.py
src/url_cache/sites/: abstract.py  all.py  stackoverflow.py
src/url_cache/sites/myanimelist/: core.py
src/url_cache/sites/myanimelist/urls/: v4.py
src/url_cache/sites/youtube/: core.py  srt_converter.py  subtitles_downloader.py
tests/: fixture.py  test_summary.py  test_urlcache.py
